# fasrtpi-beyond-crud

./: .env  pyproject.toml
migrations/: env.py
migrations/versions/: 3df47da35b39_add_review_table.py  87daefb893d5_relate_users_to_books.py  b0194e76dc7c_ädd_password_hash.py  dabecbbc2280_init.py
src/: __init__.py  celery_tasks.py  config.py  errors.py  mail.py  middleware.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/books/: books_data.py  modules.py  routes.py  schemas.py  service.py
src/db/: main.py  models.py  redis.py
src/reviews/: routes.py  schemas.py  service.py
src/tests/: conftest.py  test_auth.py  test_books.py
