[project]
name = "fastapitut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
]
